--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,21 @@ h1{
     margin-top: 10px;
     font-size: 50px;
 }
+
+h2,h3 {
+    color: gray;
+}
+
+p {
+    margin-top: 20px;
+}
+
+ul {
+    margin-top: 30px;
+    margin-left: 20px;
+}
+
+thead {
+    background-color: #20A9E5;
+}
+
