--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -23,6 +23,12 @@ header {
 }
 
 /* MAIN */
+
+main{
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
 h1 {
     margin-top: 10px;
     font-size: 50px;
@@ -69,10 +75,6 @@ thead {
 }
 
 /* FOOTER */
-
-footer {
-    margin-top: 30px;
-}
 
 .img {
     height: 220px;
