[FIX] table coloumn width

--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -8,6 +8,10 @@
     margin-top: 30px;
 }
 
+.center{
+    align-items: center;
+}
+
 /* HEADER */
 header {
     background-repeat: repeat;
@@ -71,7 +75,7 @@ thead {
 }
 
 .larger {
-    width: 200px;
+    width: 360px;
 }
 
 /* FOOTER */
